changes to display review comments on editor

--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,8 @@
 source.. = src/
-output.. = classes/
+output.. = classes/,
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               libs/boon-0.33.jar
+jars.compile.order = .
+jars.extra.classpath = libs/boon-0.33.jar
